Added busy grid settings and support

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	## Captions
 	## Galleries
 --------------------------------------------------------------*/
+@import "susy";
+@import "vendor/susy-settings";
+
 @import "variables-site/variables-site";
 @import "mixins/mixins-master";
 
