Added mappy breakpoints

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,6 +44,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 --------------------------------------------------------------*/
 @import "susy";
 @import "vendor/susy-settings";
+@import "vendor/mappy-breakpoints";
 
 @import "variables-site/variables-site";
 @import "mixins/mixins-master";
